--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "execa": "^0.4.0",
+    "lodash": "^4.13.1",
     "mongoose": "^4.4.19",
     "restify": "^4.1.0"
   },
